# studystack

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: schema.sql
backend/app/rag/: chunking.py  embeddings.py  epub_loader.py  pipeline.py
backend/app/routers/: ask.py  health.py  ingest.py
backend/scripts/: ask.py  ingest.py  init_db.py
backend/tests/: test_chunking.py
