[project]
name = "studystack"
version = "0.1.0"
description = "RAG study companion for a CS bookshelf - Phase 1"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
